<resources>
    <string name="google_api_key">AIzaSyAfnsDUFfz_A3Co_2U08Vn1FZKd9B-8zJo</string>
    <string name="app_name">On Damond Client</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="me">Me</string>

    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="confirm">Confirm</string>
    <string name="submit">Submit</string>
    <string name="save">Save</string>

    <string name="login">Login</string>
    <string name="signup">Sign up</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="menu_request_patrol">Request patrol</string>
    <string name="menu_my_intervention">My interventions</string>
    <string name="menu_need_equipment">Need equipment</string>
    <string name="menu_help">Help</string>
    <string name="menu_legal_notices">Legal notices</string>
    <string name="menu_profile">Modify my account</string>
    <string name="menu_homesetting">Home settings</string>
    <string name="menu_add_contact">Contact</string>
    <string name="menu_add_home_address">Home address</string>

    <string name="create_request">Create request</string>

    <string name="staff_member_patrols_your_home">Staff member patrols\n your home</string>
    <string name="when_do_you_need">When do you need ... </string>
    <string name="where_do_you_need">Where do you need ... </string>

    <string name="choose_response_options">Choose a response option to your request for help:</string>
    <string name="physical_response">Physical\nresponse</string>
    <string name="call_response">Call\nresponse</string>
    <string name="message_response">Message\nresponse</string>

    <string name="safety_equipment_information">Safety equipment\ninformation</string>
    <string name="fill_out_our_form">Fill out our form, an advisor will contact you to resolve your equipment need</string>
    <string name="protection_for">Protection for</string>
    <string name="type_of_home">Type of home</string>
    <string name="main_residence">Main residence</string>
    <string name="access">Access</string>
    <string name="second_access">Secondary access</string>
    <string name="number_of_occupants">Number of occupants</string>
    <string name="postal_code">Postal code</string>
    <string name="hours_a_day">Hours a day is your\nhouse unoccupied</string>
    <string name="burglary_in_neghborhood">Burglary in the neighborhood</string>

    <string name="what_do_you_need_our_help">What do you need our help on?</string>
    <string name="mission_relation_problem">Mission related problem</string>
    <string name="payment_method">Payment method</string>
    <string name="my_account">My account</string>
    <string name="other">Other</string>

    <string name="data_protection">Data protection</string>
    <string name="terms_of_use">Terms of use</string>
    <string name="software_license">Software license</string>

    <string name="home_second">Home Second</string>

    <string name="user_name">User name</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="phone_number">Phone number</string>
    <string name="address_email">Address email</string>
    <string name="password">Password</string>
    <string name="height">Height</string>
    <string name="family">Family</string>
    <string name="description">Description</string>
    <string name="edit_my_home_setting">Edit My Home Setting</string>

    <string name="address_title">Address title</string>
    <string name="location">Location</string>

    <string name="valid_No_email_password">Please enter your email and password.</string>
    <string name="valid_No_email_register">Email entered is not registered. Create an account now?</string>
    <string name="invalid_incorrect_password">Password entered is incorrect.</string>
    <string name="social_login_success">You have successfully logged in.</string>
    <string name="invalid_social_login">Error encountered during authentication. Please try again.</string>
    <string name="not_now">Not now</string>
    <string name="sign_up">Sign Up</string>
    <string name="try_again">Try again</string>
    <string name="valid_No_email">Please enter your email.</string>
    <string name="valid_Invalid_email">Email address is invalid.</string>
    <string name="valid_No_password">Please enter your password.</string>

    <string name="msg_error_network">Oops! Please connect to the internet and try again.</string>

    <string name="Error">Error</string>
    <string name="Success">Success</string>
    <string name="Warning">Warning</string>
    <string name="Okay">Okay</string>
    <string name="upload_photo">Upload Photo</string>
    <string name="take_new_photo">Take a new photo</string>
    <string name="select_gallery">Select from gallery</string>
    <string name="msg_error_permission">Check your permissions in Settings -> Apps -> On Damond Client -> Permissions</string>
</resources>
