<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_request_patrol"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_request_patrol" />
        <item
            android:id="@+id/nav_my_intervention"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_my_intervention" />
        <item
            android:id="@+id/nav_need_equipment"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_need_equipment" />
        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_help" />
        <item
            android:id="@+id/nav_legal_notice"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_legal_notices" />
    </group>
</menu>
