<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:contentDescription="@string/app_name"
    android:orientation="vertical"
    android:scaleType="fitXY" >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:orientation="vertical">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/app_large_padding"
                android:layout_gravity="center"
                android:src="@mipmap/ico_logo"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/app_large_padding"
            android:orientation="vertical">
            <Button
                android:id="@+id/btn_login"
                style="@style/normalButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/app_large_padding"
                android:text="@string/login"/>
            <Button
                android:id="@+id/btn_signup"
                style="@style/normalButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/app_small_padding"
                android:textColor="@color/app_back_color"
                android:text="@string/signup"
                android:background="@drawable/bg_rectangle_blue_line"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>