<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/darker_gray"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:background="@android:color/white"
        android:orientation="vertical" >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@android:color/white"
            android:orientation="horizontal" >
            <fragment
                android:id="@+id/map"
                android:name="com.google.android.gms.maps.SupportMapFragment"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/app_small_padding"
            android:background="@android:color/darker_gray"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_marginTop="@dimen/app_small_padding"
                android:textSize="@dimen/app_font_h1"
                android:textColor="@color/app_back_color"
                android:text="I FEEL DANGER"/>
            <View
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/app_small_padding"
                android:layout_height="1dp"
                android:background="@android:color/black"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_marginTop="@dimen/app_small_padding"
                android:layout_marginBottom="@dimen/app_small_padding"
                android:textSize="@dimen/app_font_h3"
                android:textColor="@android:color/black"
                android:text="@string/choose_response_options"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/darker_gray"
                android:layout_marginTop="@dimen/app_small_padding"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/darker_gray"
                    android:layout_weight="1"
                    android:orientation="vertical">
                    <ImageView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_gravity="center"
                        android:src="@mipmap/ico_phygical"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:layout_marginTop="@dimen/app_small_padding"
                        android:layout_marginBottom="@dimen/app_small_padding"
                        android:textSize="@dimen/app_font_h3"
                        android:textColor="@android:color/black"
                        android:text="@string/physical_response"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/darker_gray"
                    android:layout_weight="1"
                    android:orientation="vertical">
                    <ImageView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_gravity="center"
                        android:src="@mipmap/ico_call"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:layout_marginTop="@dimen/app_small_padding"
                        android:layout_marginBottom="@dimen/app_small_padding"
                        android:textSize="@dimen/app_font_h3"
                        android:textColor="@android:color/black"
                        android:text="@string/call_response"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/darker_gray"
                    android:layout_weight="1"
                    android:orientation="vertical">
                    <ImageView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_gravity="center"
                        android:src="@mipmap/ico_message"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:layout_marginTop="@dimen/app_small_padding"
                        android:layout_marginBottom="@dimen/app_small_padding"
                        android:textSize="@dimen/app_font_h3"
                        android:textColor="@android:color/black"
                        android:text="@string/message_response"/>
                </LinearLayout>
            </LinearLayout>
    </LinearLayout>
    </LinearLayout>
</LinearLayout>